tests/golden/test_assertThrow.jsonnet.golden
runtime error: expected argument to throw on evaluation, but it returned instead
    test_assertThrow.jsonnet:2:18-25: function <assert_throw> call