tests/golden/test_assertThrow.jsonnet
// Test that test.assertThrow will return error, if body is not errored
test.assertThrow(1, '1')
